theme__container__btn position fixed on mobile responsive design

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -570,6 +570,15 @@ footer{
     .navbar__login__btn:hover{
         color: var(--white);
     }
+    .navbar-burger{
+        transform: translateY(25%);
+    }
+    .theme__container__btn{
+        width: 50px;
+        /* transform: translateX(100%); */
+        transform: translate(500%, 120%);
+    }
+
 
     .home__container, #homepage{
         height: 720px;
